--- a/css/cabecalho.css
+++ b/css/cabecalho.css
@@ -42,3 +42,13 @@
 REM é uma unidade relativa à propriedade font-size da tag <html>, portanto se a tag <html> tem 16px de font-size 1 REM é equivalente à 16px. EM é relativa à propriedade font-size da tag mãe, portanto se a tag mãe tiver um font-size de 16px 1 EM é equivalente à 16px.
 
 REM vem de “Root ephemeral” que em uma tradução técnica fica “variável à raiz”, ou seja, é variável em relação à propriedade font-size da tag raiz (HTML). EM vem de “ephemeral” que significa “variável”, e ela é variável à propriedade font-size da tag mãe.*/
+
+/* desktop  */
+@media screen and (min-width: 1024px) {
+  .cabecalho {
+    flex-direction: row;
+    justify-content: space-between;
+
+    border: none;
+  }
+}
