--- a/css/institucional.css
+++ b/css/institucional.css
@@ -52,3 +52,36 @@
 .institucional__video {
   width: 100vw;
 }
+
+/* tablet  */
+@media screen and (min-width: 768px) {
+  .institucional__contato-email {
+    display: inline-block;
+  }
+
+  .institucional__video {
+    width: 100%;
+  }
+}
+
+/* desktop */
+@media screen and (min-width: 1024px) {
+  .institucional__conteudo {
+    width: 100%;
+
+    display: flex;
+    justify-content: space-between;
+
+    text-align: left;
+  }
+
+  .institucional__video {
+    align-self: flex-end;
+
+    width: 375px;
+  }
+
+  .institucional__contato-email {
+    display: block;
+  }
+}
