--- a/css/rodape.css
+++ b/css/rodape.css
@@ -33,3 +33,18 @@
 
   margin: 0 0.5rem 0.7rem;
 }
+
+/* desktop */
+@media screen and (min-width: 1024px) {
+  .rodape {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .rodape__navegacao {
+    text-align: left;
+
+    min-width: 600px;
+  }
+}
